# CppND-Garbage-Collector

./: .gitignore  CMakeLists.txt  Makefile  README.md  gc_details.h  gc_iterator.h
include/: LeakTester.h  gc_pointer.h
src/: main.cpp
